Fix semantic defects in gatherer operators
- first()/elementAt() now emit at most one Optional and short-circuit correctly.
- tumblingTimeWindow uses Math.floorDiv for correct negative timestamp alignment.
- partition/groupBy preserve null elements; flatMap validates mapper returns non-null Iterable.
- Notification.OnNext allows null values, matching Stream semantics.
- onErrorReturn/onErrorResume/retry no longer swallow downstream errors.
- debounce/sessionWindow use overflow-safe gap comparison.
- Update Javadoc for doFinally, Window.startIndex/endIndex and JDK 24 -> Java 25.